--- a/SimpleApp.html
+++ b/SimpleApp.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background:yellow">
+<body  style="background:yellow">
     <h1 style=color:red;>Heading</h1>
     <h2 style="background:blue">Heading</h2>
+    <h3 style="background:violet">heading</h3>
+    <script src="app.js"></script>
 </body>
 </html>
