--- a/SimpleApp.html
+++ b/SimpleApp.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body  style="background:yellow">
-    <h1 style=color:red;>Heading</h1>
+    <h1 id="head" style=color:red;>Heading</h1>
     <h2 style="background:blue">Heading</h2>
     <h3 style="background:violet">heading</h3>
     <script src="app.js"></script>
