Added some extra feature

--- a/SimpleApp.html
+++ b/SimpleApp.html
@@ -7,8 +7,12 @@
 </head>
 <body  style="background:yellow">
     <h1 id="head" style=color:red;>Heading</h1>
-    <h2 style="background:blue">Heading</h2>
+    <h2 id="Head" style="background:blue">Heading</h2>
     <h3 style="background:violet">heading</h3>
     <script src="app.js"></script>
+    <script>
+        let h2=document.querySelector("#Head");
+        h2.innerHTML="This is second larger heading";
+    </script>
 </body>
 </html>
